--- a/5주차/player_finder/player_finder/player_finder.vcxproj
+++ b/5주차/player_finder/player_finder/player_finder.vcxproj
@@ -130,7 +130,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="tree.h" />
+    <ClInclude Include="structType.h" />
     <ClInclude Include="map.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
