--- a/5주차/player_finder/player_finder/player_finder.vcxproj.filters
+++ b/5주차/player_finder/player_finder/player_finder.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="tree.h">
+    <ClInclude Include="structType.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="map.h">
